samples/_failures_safe/1761351796_e42d4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae09a86d.c: In function ‘main’:
./samples/SAFE/__tmp_ae09a86d.c:172:37: error: expected ‘)’ at end of input
  172 |     print_tokens(tokens, token_count
      |                 ~                   ^
      |                                     )
./samples/SAFE/__tmp_ae09a86d.c:172:5: error: expected declaration or statement at end of input
  172 |     print_tokens(tokens, token_count
      |     ^~~~~~~~~~~~
